--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="50dp"
     android:paddingBottom="50dp"
     android:orientation="vertical"
-    tools:context="com.cqing.project00.MainActivity">
+    tools:context="com.cqing.project00.activity.MainActivity">
 
     <TextView
         android:layout_width="200dp"
@@ -18,8 +18,8 @@
         android:gravity="center"
         android:layout_marginBottom="3dp"
         android:text="@string/my_nanodegree_apps"
-        android:textSize="19sp"
-        android:textColor="#000000"/>
+        android:textSize="@dimen/text_size"
+        android:textColor="@color/textColor"/>
     <Button
         android:id="@+id/btn_1"
         style="@style/btn_syle"
