--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="btnPressedColor">#095fae</color>
+    <color name="btnUnpressedColor">#162a3c</color>
+    <color name="textColor">#000000</color>
+    <color name="buttonColor">#ffffff</color>
+
 </resources>
