--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginBottom">3dp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/buttonColor</item>
         <item name="android:background">@drawable/btn</item>
     </style>
 </resources>
