--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,32 +22,32 @@
         android:textColor="@color/textColor"/>
     <Button
         android:id="@+id/btn_1"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/popular_movies"
         />
     <Button
         android:id="@+id/btn_2"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/stock_hawk"
         />
     <Button
         android:id="@+id/btn_3"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/build_it_bigger"
         />
     <Button
         android:id="@+id/btn_4"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/make_your_app_material"
         />
     <Button
         android:id="@+id/btn_5"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/go_ubiquitous"
         />
     <Button
         android:id="@+id/btn_6"
-        style="@style/btn_syle"
+        style="@style/btnStyle"
         android:text="@string/capstone"
         />
 </LinearLayout>
