--- a/app/src/main/res/layout/activity_popular_detail.xml
+++ b/app/src/main/res/layout/activity_popular_detail.xml
@@ -4,11 +4,7 @@
     android:id="@+id/activity_popular_movies_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cqing.project00.activity.PopularMoviesInfoActivity">
+    tools:context="com.cqing.project00.activity.MovieDetailActivity">
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
