--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,16 +3,47 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="btn_syle">
-        <item name="android:layout_width">200dp</item>
-        <item name="android:layout_height">0dp</item>
+    <!-- main -->
+    <style name="btnStyle">
+        <item name="android:layout_width">@dimen/btn_width</item>
+        <item name="android:layout_height">@dimen/btn_height</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginBottom">3dp</item>
-        <item name="android:textColor">@color/buttonColor</item>
+        <item name="android:layout_marginBottom">@dimen/btn_margin_bottom</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/btn</item>
+    </style>
+    <!-- popular movies -->
+    <style name="detailTitleText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/text_nav</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:paddingLeft">@dimen/movie_detail_padding_left</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/movie_nav_text</item>
+        <item name="android:background">@color/nav</item>
+    </style>
+    <style name="relativeLayoutButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:gravity">center</item>
+        <item name="android:checkable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:paddingBottom">@dimen/relative_layout_padding_top</item>
+        <item name="android:paddingTop">@dimen/relative_layout_padding_top</item>
+        <item name="android:paddingLeft">@dimen/relative_layout_padding_left</item>
+        <item name="android:paddingRight">@dimen/relative_layout_padding_left</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/relative_layout_btn</item>
+    </style>
+    <style name="relativeLayoutButtonTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
