--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -3,9 +3,6 @@
     android:id="@+id/gv_popular_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="2"
-    android:stretchMode="columnWidth"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true">
+    android:numColumns="2">
 
 </GridView>
