--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,7 +21,8 @@
     <dimen name="text_nav">110dp</dimen>
     <dimen name="movie_nav_text">29sp</dimen>
     <dimen name="radius">5dp</dimen>
-    <dimen name="relative_layout_padding_top">10dp</dimen>
-    <dimen name="relative_layout_padding_left">25dp</dimen>
+    <dimen name="relative_layout_padding_top">8dp</dimen>
+    <dimen name="relative_layout_padding_left">15dp</dimen>
     <dimen name="text_date">26sp</dimen>
+    <dimen name="text_average">20sp</dimen>
 </resources>
