--- a/app/src/main/res/layout/activity_popular_detail.xml
+++ b/app/src/main/res/layout/activity_popular_detail.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_popular_movies_info"
+
+<FrameLayout android:id="@+id/popular_movie_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cqing.project00.activity.MovieDetailActivity">
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    </FrameLayout>
-</RelativeLayout>
+</FrameLayout>
+
