--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:paddingLeft="50dp"
-    android:paddingRight="50dp"
     android:paddingTop="50dp"
     android:paddingBottom="50dp"
     android:orientation="vertical"
     tools:context="com.cqing.project00.activity.MainActivity">
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginBottom="3dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:text="@string/my_nanodegree_apps"
         android:textSize="@dimen/text_size"
         android:textColor="@color/textColor"/>
