--- a/app/src/main/res/layout/activity_popular_movies.xml
+++ b/app/src/main/res/layout/activity_popular_movies.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/container">
 
-    </FrameLayout>
-</LinearLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_popular_movie"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:name="com.cqing.project00.fragment.PopularMoviesFragment"
+    tools:layout="@layout/fragment_popular_movies">
+
+</fragment>
