--- a/app/src/main/res/layout/fragment_popular_detail.xml
+++ b/app/src/main/res/layout/fragment_popular_detail.xml
@@ -1,197 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gv_popular_movies"
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/movie_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    tools:context="com.cqing.project00.fragment.MovieDetailFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" />
 
-    <TextView
-        android:id="@+id/tv_title"
-        style="@style/detailTitleText" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tv_title">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:id="@+id/relativeLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/movie_detail_padding_top">
-
-                <ImageView
-                    android:id="@+id/iv_movies"
-                    android:layout_width="@dimen/iv_thumbnail_width"
-                    android:layout_height="@dimen/iv_thumbnail_height"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin" />
-
-                <TextView
-                    android:id="@+id/tv_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_toRightOf="@+id/iv_movies"
-                    android:textSize="@dimen/text_date"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_toRightOf="@+id/iv_movies"
-                    android:textSize="@dimen/text_date"
-                    android:textColor="@color/black"/>
-
-                <RelativeLayout
-                    android:id="@+id/relativeLayout_average"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_below="@+id/tv_time"
-                    android:layout_toRightOf="@+id/iv_movies">
-
-                    <TextView
-                        android:id="@+id/tv_average_black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/average"
-                        android:textSize="@dimen/text_average"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/tv_averages"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tv_average_black"
-                        android:layout_alignBaseline="@+id/tv_average_black"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:textSize="@dimen/text_date"
-                        android:textColor="@color/black"/>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:id="@+id/relativeLayout_btn"
-                    style="@style/relativeLayoutButton"
-                    android:layout_below="@+id/relativeLayout_average"
-                    android:layout_toRightOf="@+id/iv_movies">
-
-                    <TextView
-                        android:id="@+id/tv_btn_mark_as"
-                        style="@style/relativeLayoutButtonTextView"
-                        android:text="@string/mark_as" />
-
-                    <TextView
-                        style="@style/relativeLayoutButtonTextView"
-                        android:layout_below="@+id/tv_btn_mark_as"
-                        android:text="@string/favorite" />
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/relativeLayout_btn"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/relative_layout_padding_top"
-                android:layout_marginBottom="@dimen/relative_layout_padding_top">
-
-                <TextView
-                    android:id="@+id/tv_overview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/tv_overview"
-                    android:textColor="@color/black"/>
-            </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:background="@color/grayLine"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/iv_trailer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_play"/>
-                <TextView
-                    android:id="@+id/tv_trailer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/tv_overview"
-                    android:textColor="@color/black"
-                    android:text="trailer1"/>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:background="@color/grayLine"/>
-            <LinearLayout
-                android:id="@+id/ll_review"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="21sp"
-                    android:textColor="@color/black"
-                    android:text="author: "/>
-                <TextView
-                    android:id="@+id/tv_review_author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="21sp"
-                    android:textColor="@color/black"
-                    android:text="Bob"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/tv_overview"
-                    android:textColor="@color/black"
-                    android:text="content: "/>
-                <TextView
-                    android:id="@+id/tv_review_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/tv_overview"
-                    android:textColor="@color/black"
-                    android:text="this is great! thank for you bla bla "/>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
