--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gv_popular_movies"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="2">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.cqing.project00.fragment.PopularMoviesFragment">
 
-</GridView>
+    <GridView
+        android:id="@+id/gv_popular_movies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2">
+    </GridView>
+
+</FrameLayout>
