--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -9,8 +9,11 @@
     </style>
     <!-- main -->
     <style name="btnStyle">
-        <item name="android:layout_width">@dimen/btn_width</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/btn_height</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginBottom">@dimen/btn_margin_bottom</item>
         <item name="android:textColor">@color/white</item>
@@ -45,5 +48,15 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="articleTitleText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="MyListView">
+
     </style>
 </resources>
